# Kozy-GPGPU-Framework

./: .gitignore  API_Handler.cpp  API_Handler.hpp  API_Handler_OpenGL.cpp  API_Handler_OpenGL.hpp  BuildConfig.h.in  BuildConfig.hpp.in  CMakeLists.txt  CMakeLists3.txt  GPGPU_Manager.hpp  GPU_API_ID.hpp  README.md  main.cpp  notes.txt
Events/: CMakeLists.txt  Events_Manager.cpp  Events_Manager.hpp  GPU_API_Wrapper_Interface.hpp  OpenGL_Functions.hpp  OpenGL_Wrapper.cpp  OpenGL_Wrapper.hpp  WindowInfo.hpp
GPU_API_HANDLING/: API_Handler.cpp  API_Handler.hpp  API_Handler_OpenGL.cpp  API_Handler_OpenGL.hpp  CMakeLists.txt  GPGPU_Manager.hpp  GPU_API_ID.hpp
GPU_Handling2/: CMakeLists.txt  GPU_API_Wrapper.cpp  GPU_API_Wrapper.hpp  GPU_Manager.cpp  GPU_Manager.hpp  OpenGL_Functions.cpp  OpenGL_Functions.hpp
Test/: CMakeLists.txt  compileTest.cpp  mini.cpp  testMain.cpp
Test/Basic/: compileTest.cpp
Test/Temp/: tempTest.cpp
test_build/: .ninja_deps  .ninja_log  BuildConfig.h  CMakeCache.txt  build.ninja  cmake_install.cmake
test_build/GPU_API_HANDLING/: cmake_install.cmake
